Fully implement Discord bot